# Instagram

./: .coverage  .dockerignore  Dockerfile  pyproject.toml
comments/: admin.py  locustfile.py  models.py  serializers.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_likes.py
instagram/: .env  settings.py  urls.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_likes_alter_post_save.py  0002_alter_post_video.py  0003_post_save.py  0003_rename_save_post_savesystem.py
posts/templates/: posts.html
tags/: admin.py  models.py  serializers.py
tags/migrations/: 0001_initial.py  0002_alter_taggeditem_tag.py
user/: models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
